--- a/style.css
+++ b/style.css
@@ -28,7 +28,10 @@ p {
   margin: 0;
   padding: 0;
 }
-
+@font-face {
+  font-family: "Mordak";
+  src: url("font/Mordak Regular.otf") format("opentype");
+}
 h1,
 h2 {
   font-family: "Mordak", sans-serif;
@@ -162,7 +165,7 @@ h1 {
   justify-content: right;
 }
 
-.aside {
+.section-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -173,7 +176,7 @@ h1 {
   border-top: 2px solid #4f88a1;
   font-size: 10px;
 }
-.aside h2 {
+.section-header h2 {
   margin: 0;
   padding-left: 5px;
   color: rgb(255, 249, 240);
@@ -194,13 +197,13 @@ main {
   width: 100%;
   border-bottom: 1px solid #000000;
 }
-.profile-pic {
+.me-pic {
   display: flex;
   flex: 3;
   justify-content: left;
   align-items: first baseline;
 }
-.profile-pic img {
+.me-pic img {
   width: 55%;
   margin: 10% 0 10% 10%;
   padding: 5px;
@@ -260,43 +263,125 @@ p.orange {
   color: #1a3d4b;
   padding: 1px;
 }
-@font-face {
-  font-family: "Mordak";
-  src: url("font/Mordak Regular.otf") format("opentype");
-}
 
 /*<---------------- Guestbook ---------------------->*/
 
 #guestbook {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: row;
   background: #f8f8f8;
   padding: 20px;
   border-radius: 10px;
-  margin-top: 20px;
 }
 
 #guestbook-form {
   display: flex;
   flex-direction: column;
+  align-self: flex-start; /* Gör att höjden bara blir så stor som behövs */
+  width: 30%;
+  gap: 10px;
+  border: 1px solid #000000;
+}
+#guestbook-form label {
+  margin-right: 10px;
+}
+.gender-age-container,
+.alias-container {
+  display: flex;
+  flex-direction: row;
+  margin: 0 3%;
+}
+.message-container {
+  display: flex;
+  flex-direction: column;
+  margin: 0 3%;
+}
+.gender-age-container {
+  display: flex;
   gap: 10px;
 }
+.age-container {
+  display: flex;
+  flex: 1;
+}
+#name,
+#age,
+#gender {
+  width: 100%; /* Gör att de fyller sin container */
+}
+.gender-container {
+  display: flex;
+  flex: 1;
+}
+.button-container {
+  display: flex;
+  justify-content: right;
+}
+#guestbook-form button {
+  background: #d76447;
+  color: #fff;
+  border: none;
+  border-radius: 10px 0 0 0;
+  cursor: pointer;
+  background: linear-gradient(to bottom, #2f6f8a, #648391);
+  padding: 0 5px;
+  border-top: 2px solid #4f88a1;
+  font-size: 1rem;
+  font-family: "Mordak", sans-serif;
+  font-weight: normal;
+  margin: 0;
+  color: rgb(255, 249, 240);
+}
+#guestbook-form label {
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: #d76447;
+}
+/*--------------------ENTRIES----------------------*/
 
 #guestbook-entries {
-  margin-top: 20px;
-  background: #fff;
-  padding: 15px;
-  border-radius: 5px;
+  width: 70%;
+  padding-right: 15px;
+  height: 400px; /* Sätt önskad fast höjd */
+  overflow-y: auto; /* Skapar vertikal scroll om det behövs */
 }
 
 #entries-list {
   list-style: none;
+  margin: 0;
   padding: 0;
 }
 
-#entries-list li {
-  background: #e8e8e8;
+/* #entries-list li {
   padding: 10px;
-  margin-top: 5px;
+  margin-bottom: 5px;
   border-radius: 5px;
+} */
+.guestbook-entry {
+  display: flex;
+  /* align-items: center; */
+  background: #f8f8f8;
+  /* padding: 10px; */
+  margin-bottom: 10px;
+}
+
+.profile-pic {
+  max-width: 70px;
+  max-height: auto;
+  object-fit: cover; /* Behåller proportioner */
+  flex-shrink: 0; /* Hindrar att flexbox skalar upp bilden */
+  margin-right: 10px;
+  border: solid 1px #000000;
+}
+
+.entry-content {
+  flex: 1;
+}
+.alias {
+  font-weight: bold;
+  color: #2f6f8a;
 }
 
 /*<---------------- Media queries ---------------------->*/
