--- a/style.css
+++ b/style.css
@@ -11,10 +11,6 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  /* width: 100vw; */
-  height: 100vh;
-  /* display: flex;
-  align-items: center; */
 }
 
 img {
@@ -53,50 +49,35 @@ h2 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 4rem;
 }
+
 p {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
 }
 .container {
   width: 70%;
-  /* min-height: 100vh;
-  height: auto; */
   overflow: visible;
-  margin: 3% auto;
-  /* margin-bottom: 0; */
+  margin: 15vh auto 3% auto;
   background-color: #f8f8f8;
-  /* border-top: 1px solid #000000; */
 }
 
 .header {
   display: grid;
   grid-template-columns: auto 1fr;
-  grid-template-rows: 1fr auto;
+  grid-template-rows: auto auto; /* grid-template-rows: 1fr auto; */
   background-color: #d76447;
 }
-/* .header {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2fr, 1fr);
-  background-color: #d76447;
-} */
-/* #right-header {
-  display: flex;
-  flex: 1;
-} */
 
 #left-top-header {
   display: flex;
-  /* flex: 1; */
   flex-direction: row;
   justify-content: center;
   align-items: center;
   background: linear-gradient(to bottom, #2f6f8a, #4a798e);
   border-top-right-radius: 100px;
   border-left: 1px solid #000000;
-  /* border-right: 1px solid #000000; */
-  border-top: 2px solid #45839e;
+  border-top: 1px solid #45839e;
   box-shadow: 0 -1px 0 0 #000000;
   gap: 1px;
 }
@@ -107,7 +88,7 @@ p {
   background: linear-gradient(to bottom, #4a798e, #648391);
   border-bottom: 1px solid #000000;
   border-left: 1px solid #000000;
-  padding-left: 25%;
+  padding: 2% 2% 2% 25%;
   align-items: center;
 }
 
@@ -117,14 +98,17 @@ p {
   list-style: none;
   padding: 0;
   margin: 0;
-  gap: 15px;
+  gap: 20px;
 }
 
 #left-bottom-header img {
-  width: 31px; /*20*/
+  width: 35px; /*20*/
   margin: 5px, 5px;
 }
-
+#right-top-header {
+  display: flex;
+  flex: 1;
+}
 #right-bottom-header {
   height: auto;
   text-align: right;
@@ -133,17 +117,12 @@ p {
   background: linear-gradient(to bottom, #4a798e, #648391);
   border-right: 1px solid #000000;
   border-bottom: 1px solid #000000;
-  border-top: 2px solid #45839e;
+  border-top: 1px solid #45839e;
   box-shadow: 0 -1px 0 0 #000000;
 }
 
-#right-top-header {
-  display: flex;
-  flex: 1;
-}
-
 #right-bottom-header h1 {
-  font-size: 1.5rem;
+  font-size: 3rem;
   color: #45839e;
   padding-right: 5px;
 }
@@ -159,21 +138,21 @@ p {
   color: #d24e29;
   padding-left: 15px;
   margin-top: -5px;
-  margin-bottom: -15px;
+  margin-bottom: -30px;
 }
 
 .lname {
   color: #45839e;
   padding-right: 40px;
   margin-top: -5px;
-  margin-bottom: -15px;
+  margin-bottom: -30px;
 }
 
 .nav {
   display: flex;
   background-color: #d76447; /* Bakgrundsfärg */
   padding-left: 0px; /* Utrymme runt innehållet */
-  padding-bottom: 2%; /* Utrymme under elementet */
+  padding-bottom: 5%; /* Utrymme under elementet */
   border-bottom: 1px solid #000000; /* Linje under navigationslisten */
 }
 
@@ -210,6 +189,7 @@ p {
   width: 100%; /* Tar upp hela bredden av föräldern */
   font-family: "Mordak", "FallbackBold", sans-serif;
   font-weight: normal;
+  font-size: 1.3rem;
   text-decoration: none; /* Tar bort understrykning */
   color: rgb(255, 249, 240); /* Svart färg på texten */
 }
@@ -222,12 +202,12 @@ p {
   background: linear-gradient(to bottom, #2f6f8a, #648391);
   padding: 0px;
   border-bottom: 1px solid #000000;
-  border-top: 2px solid #4f88a1;
+  border-top: 1px solid #4f88a1;
   /* font-size: 10px; */
 }
 .section-header h2,
 .facts-border h2 {
-  font-size: 1rem;
+  font-size: 1.3rem;
   margin: 0;
   padding-left: 10px;
   color: rgb(255, 249, 240);
@@ -273,7 +253,7 @@ main {
   width: 100%;
   flex-wrap: wrap;
   background: linear-gradient(to bottom, #2f6f8a, #648391);
-  border-top: 2px solid #4f88a1;
+  border-top: 1px solid #4f88a1;
   border-bottom: 1px solid #000000;
   color: rgb(255, 249, 240);
 }
@@ -307,12 +287,11 @@ p.orange {
 .footer {
   width: 100%;
   margin: 0 auto;
-  margin-bottom: 0;
   background-color: #d76447;
   text-align: right;
   font-size: 12px;
   color: #1a3d4b;
-  padding: 1px;
+  padding: 1px 1px 10px 1px;
 }
 
 /*<---------------- Guestbook ---------------------->*/
@@ -378,7 +357,7 @@ p.orange {
   cursor: pointer;
   background: linear-gradient(to bottom, #2f6f8a, #648391);
   padding: 0 5px;
-  border-top: 2px solid #4f88a1;
+  border-top: 1px solid #4f88a1;
   font-size: 1rem;
   font-family: "Mordak", sans-serif;
   font-weight: normal;
@@ -436,109 +415,155 @@ p.orange {
 }
 
 /*<---------------- Media queries ---------------------->*/
+@media (min-width: 826px) and (max-width: 1280px) {
+  h1 {
+    font-size: 3.8rem;
+  }
+  .container {
+    width: 90vw;
+    margin-top: 10vh;
+  }
+  p {
+    font-size: 1.2rem;
+  }
+  .fname,
+  .lname {
+    margin-top: -5px;
+    margin-bottom: -20px;
+  }
 
-@media (min-width: 575px) and (max-width: 820px) {
-  h1 {
-    font-size: 2.5rem;
+  #left-bottom-header {
+    padding: 2% 2% 2% 25%;
   }
-  .container {
-    width: 90%;
-    margin-top: 5%;
-  }
-  h2 {
-    font-size: 1rem;
-  }
-  p {
-    font-size: 0.9rem;
-  }
-  .main-info {
-    padding-left: 3%;
-  }
-  /* .profile-pic img {
-    width: 75%;
-  } */
-}
-@media (min-width: 381px) and (max-width: 575px) {
-  h1 {
+  #right-bottom-header h1 {
     font-size: 2rem;
-    margin-top: 20px;
   }
-  .container {
-    width: 93%;
-  }
-  /* .header {
-    display: grid;
-    grid-template-columns: auto 1fr;
-    grid-template-rows: auto auto;
-    background-color: #d76447;
-  } */
-  p {
-    font-size: 0.7rem;
-  }
-  .fname h1,
-  .lname h1 {
-    margin-top: 0px;
-    margin-bottom: -10px;
-  }
-  #left-bottom-header img {
-    width: 25px;
-  }
-  .main-info {
-    padding-left: 3%;
-  }
-  .nav a {
-    font-size: 0.8rem;
-  }
-  .nav-middle li,
-  .nav-right li {
-    padding: 1px 3px; /* Utrymme runt */
+  .nav li a {
+    font-size: 1.3rem;
   }
   .section-header h2,
   .facts-border h2 {
-    font-size: 0.8rem;
+    font-size: 1.3rem;
   }
-  /* .profile-pic img {
-    width: 75%;
-  } */
+  #left-bottom-header img {
+    width: 35px;
+  }
+  .main-info {
+    padding-left: 3%;
+  }
 }
-
-@media (max-width: 380px) {
+@media (min-width: 575px) and (max-width: 825px) {
   h1 {
+    font-size: 2.7rem;
+  }
+  .container {
+    width: 90vw;
+    margin-top: 10vh;
+  }
+  .fname,
+  .lname {
+    margin-top: -5px;
+    margin-bottom: -15px;
+  }
+  p {
+    font-size: 1rem;
+  }
+  #left-bottom-header {
+    padding: 2% 2% 2% 25%;
+  }
+  #right-bottom-header h1 {
     font-size: 1.5rem;
   }
-  /* .fname {
-    padding-left: 2%;
-  } */
-
-  #right-bottom-header h1 {
+  #left-bottom-header img {
+    width: 27px;
+  }
+  .nav li a {
     font-size: 1rem;
+  }
+  .section-header h2,
+  .facts-border h2 {
+    font-size: 1rem;
+  }
+  .main-info {
+    padding-left: 3%;
+  }
+}
+
+@media (min-width: 401px) and (max-width: 575px) {
+  h1 {
+    font-size: 1.6rem;
+  }
+  .container {
+    width: 90vw;
+    margin-top: 10vh;
+  }
+
+  p {
+    font-size: 0.7rem;
+  }
+  .fname,
+  .lname {
+    margin-top: -5px;
+    margin-bottom: -8px;
+  }
+  #left-bottom-header {
+    padding-left: 18%;
   }
   #left-bottom-header img {
     width: 20px;
   }
-  .container {
-    width: 93%;
-    margin-top: 5%;
+  #right-bottom-header h1 {
+    font-size: 1rem;
   }
-  p {
-    font-size: 0.5rem;
+  .main-info {
+    padding-left: 3%;
+  }
+  .nav li a {
+    font-size: 0.6rem;
   }
   .section-header h2,
   .facts-border h2 {
+    font-size: 0.8rem;
+  }
+}
+
+@media (max-width: 400px) {
+  h1 {
+    font-size: 1.6rem;
+  }
+  .container {
+    width: 93%;
+    margin-top: 10vh;
+  }
+
+  p {
     font-size: 0.6rem;
+  }
+  .fname,
+  .lname {
+    margin-top: -5px;
+    margin-bottom: -5px;
+  }
+  #left-bottom-header {
+    padding-left: 18%;
+  }
+  #left-bottom-header img {
+    width: 20px;
+  }
+  #right-bottom-header h1 {
+    font-size: 1rem;
   }
   .main-info {
     padding-left: 3%;
   }
   .nav {
-    padding-bottom: 30px;
+    padding-bottom: 10%;
   }
-  .nav a {
+  .nav li a {
     font-size: 0.6rem;
   }
-
-  .me-pic img {
-    width: 80%;
-    margin: 10px;
+  .section-header h2,
+  .facts-border h2 {
+    font-size: 0.6rem;
   }
 }
