--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   margin: 0;
   padding: 0;
   line-height: 1.6;
-  height: 100vh;
+  height: 97vh;
 }
 
 img {
@@ -50,17 +50,16 @@ h2 {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 5rem;
 }
 
 p {
-  font-size: 1.3rem;
+  font-size: 2rem;
 }
 .container {
-  width: 70%;
-  overflow: visible;
-  margin: 3% auto;
-  background-color: #f8f8f8;
+  width: 80vw;
+  margin-top: 3vh;
+  margin-left: 8vw;
 }
 
 .header {
@@ -121,7 +120,7 @@ p {
   grid-area: headerbox4;
   display: flex;
   flex-direction: row;
-  background: linear-gradient(to bottom, #1d5672, #33607f);
+  background: linear-gradient(to bottom, #265870, #33607f);
   border-bottom: 1px solid #000000;
   border-top: 1px solid #4b7993;
   outline: 1px solid #255870;
@@ -135,18 +134,19 @@ p {
   list-style: none;
   padding: 0;
   margin: 0;
-  gap: 15px;
+  gap: 50px;
   justify-content: center;
   align-items: center;
 }
 
 #headerbox4 img {
-  width: 31px;
-  margin: 5px, 5px;
+  width: 40px;
 }
 .seperator {
   font-family: "Arial", "Segoe UI Symbol", "Noto Sans Symbols", sans-serif;
-  font-size: 20px;
+  font-size: 40px;
+  /* padding-left: 5%;
+  padding-right: 5%; */
   color: #2e5f7e;
   opacity: 0.25; /* Gör texten lite genomskinlig */
   display: inline-block;
@@ -169,9 +169,9 @@ p {
 }
 
 #headerbox5 h1 {
-  font-size: 1.5rem;
+  font-size: 3rem;
   color: #33607f;
-  padding-right: 5px;
+  padding-right: 10px;
   -webkit-text-stroke: 0.6px black; /* Tunn kantlinje runt texten */
   text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3); /* Tunn skugga */
   letter-spacing: -2px;
@@ -181,7 +181,7 @@ p {
 }
 #headerbox7 {
   grid-area: headerbox7;
-  margin-left: -1px;
+  margin-left: 0px;
 }
 
 #fname {
@@ -208,7 +208,7 @@ p {
 .nav {
   display: flex;
   background-color: #d76447; /* Bakgrundsfärg */
-  padding-bottom: 2%; /* Utrymme under elementet */
+  padding-bottom: 5%; /* Utrymme under elementet */
   border-bottom: 1px solid #000000; /* Linje under navigationslisten */
 }
 
@@ -228,7 +228,7 @@ p {
   border-color: black;
   border-top-color: #4f88a1;
   border-radius: 0 0 10px 10px;
-  padding: 0px 8px; /* Utrymme runt */
+  padding: 0px 2%; /* Utrymme runt */
   display: flex; /* Flexbox för att centrera innehållet */
   justify-content: center; /* Centrerar innehållet horisontellt */
   align-items: center; /* Centrerar innehållet vertikalt */
@@ -245,7 +245,6 @@ p {
   width: 100%; /* Tar upp hela bredden av föräldern */
   font-family: "Mordak", "FallbackBold", sans-serif;
   font-weight: normal;
-  font-size: 1.3rem;
   text-decoration: none; /* Tar bort understrykning */
   color: rgb(255, 249, 240); /* Svart färg på texten */
 }
@@ -263,9 +262,14 @@ p {
   border-top: 1px solid #4f88a1;
   /* font-size: 10px; */
 }
+
+.nav li a,
 .section-header h2,
 .facts-border h2 {
-  font-size: 1.3rem;
+  font-size: 1.8rem;
+}
+.section-header h2,
+.facts-border h2 {
   margin: 0;
   padding-left: 10px;
   color: rgb(255, 249, 240);
@@ -473,12 +477,14 @@ p.orange {
 }
 
 /*<---------------- Media queries ---------------------->*/
-@media (min-width: 826px) and (max-width: 1280px) {
+@media (min-width: 850px) and (max-width: 1280px) {
+  body {
+    height: 90vh;
+  }
   h1 {
-    font-size: 3.8rem;
+    font-size: 3.2rem;
   }
   .container {
-    width: 90vw;
     margin-top: 10vh;
   }
   p {
@@ -489,34 +495,41 @@ p.orange {
     margin-top: -5px;
     margin-bottom: -20px;
   }
-
-  #left-bottom-header {
-    padding: 2% 2% 2% 25%;
+  .seperator {
+    font-size: 25px;
   }
-  #right-bottom-header h1 {
-    font-size: 2rem;
+  #headerbox4 {
+    padding: 0% 2% 0% 5%;
   }
-  .nav li a {
-    font-size: 1.3rem;
+  #headerbox5 h1 {
+    font-size: 1.8rem;
   }
+  #headerbox4 ul {
+    gap: 20px;
+  }
+  .nav li a,
   .section-header h2,
   .facts-border h2 {
     font-size: 1.3rem;
   }
-  #left-bottom-header img {
-    width: 35px;
+  #headerbox4 img {
+    width: 30px;
   }
   .main-info {
     padding-left: 3%;
   }
 }
-@media (min-width: 575px) and (max-width: 825px) {
+@media (min-width: 575px) and (max-width: 849px) {
+  body {
+    height: 90vh;
+  }
   h1 {
-    font-size: 2.7rem;
+    font-size: 2.6rem;
   }
   .container {
-    width: 90vw;
     margin-top: 10vh;
+    width: 80vw;
+    margin-left: 8vw;
   }
   .fname,
   .lname {
@@ -524,23 +537,24 @@ p.orange {
     margin-bottom: -15px;
   }
   p {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
-  #left-bottom-header {
-    padding: 2% 2% 2% 25%;
+  .seperator {
+    font-size: 20px;
   }
-  #right-bottom-header h1 {
+  #headerbox5 h1 {
     font-size: 1.5rem;
   }
-  #left-bottom-header img {
-    width: 27px;
+  #headerbox4 ul {
+    gap: 20px;
   }
-  .nav li a {
-    font-size: 1rem;
+  #headerbox4 img {
+    width: 25px;
   }
+  .nav li a,
   .section-header h2,
   .facts-border h2 {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
   .main-info {
     padding-left: 3%;
@@ -548,104 +562,102 @@ p.orange {
 }
 
 @media (min-width: 401px) and (max-width: 575px) {
+  body {
+    height: 90vh;
+  }
   h1 {
-    font-size: 1.6rem;
+    font-size: 2rem;
   }
   .container {
-    width: 90vw;
     margin-top: 10vh;
+    width: 90vw;
+    margin-left: 3vw;
   }
 
   p {
-    font-size: 0.7rem;
+    font-size: 0.65rem;
   }
-  #fname h1,
-  #lname h1 {
-    margin-top: 0px;
-    margin-bottom: -10px;
+  #fname,
+  #lname {
+    margin-bottom: -8px;
   }
   #headerbox4 img {
-    width: 25px;
+    width: 20px;
+  }
+  #headerbox4 ul {
+    gap: 10px;
+  }
+  .seperator {
+    font-size: 15px;
+  }
+  #headerbox5 h1 {
+    font-size: 1rem;
   }
   .main-info {
     padding-left: 3%;
   }
-  .nav a {
-    font-size: 0.8rem;
-  }
+  .nav li a,
   .section-header h2,
   .facts-border h2 {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
   }
 }
 
 @media (max-width: 400px) {
+  body {
+    height: 90vh;
+  }
   h1 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
+  }
+
+  .container {
+    margin-top: 10vh;
+    width: 90vw;
+    margin-left: 3vw;
+  }
+
+  p {
+    font-size: 0.6rem;
+  }
+  #fname,
+  #lname {
+    margin-top: -5px;
+    margin-bottom: -5px;
+    letter-spacing: -3px;
+  }
+  #headerbox4 {
+    padding-left: 18%;
+  }
+  #headerbox4 img {
+    width: 20px;
+  }
+  #headerbox4 ul {
+    gap: 10px;
+  }
+  .seperator {
+    font-size: 15px;
   }
 
   #headerbox5 h1 {
     font-size: 1rem;
   }
-  #headerbox4 img {
-    width: 20px;
-  }
-  .container {
-    width: 93%;
-    margin-top: 10vh;
-  }
-
-  p {
-    font-size: 0.6rem;
-  }
-  .fname,
-  .lname {
-    margin-top: -5px;
-    margin-bottom: -5px;
-  }
-  #left-bottom-header {
-    padding-left: 18%;
-  }
-  #left-bottom-header img {
-    width: 20px;
-  }
-  #right-bottom-header h1 {
-    font-size: 1rem;
-  }
   .main-info {
     padding-left: 3%;
   }
-  .nav {
-    padding-bottom: 10%;
-  }
-  .nav li a {
+  .nav li a,
+  .section-header h2,
+  .facts-border h2 {
     font-size: 0.6rem;
   }
-  .me-pic img {
-    width: 80%;
-    margin: 10px;
+}
+@media (min-width: 666px) and (max-width: 1024px) {
+  body {
+    height: 97vh;
   }
-}
-/* .fancy-text {
-  position: relative;
-  font-family: "Mordak", sans-serif;
-  font-size: 50px;
-  color: #3a6d8c;
-  display: inline-block;
-}
-
-.text-outline {
-  position: absolute;
-  top: 0;
-  left: 0;
-  -webkit-text-stroke: 2px rgba(255, 255, 255, 0.5);
-  color: transparent;
-} */
-
-.fancy-text {
-  font-family: "Mordak", sans-serif;
-  font-size: 50px;
-  -webkit-text-stroke: 0.9px black; /* Tunn kantlinje runt texten */
-  color: #3a6d8c; /* Originalfärg på texten */
-  text-shadow: -1px -1px 0px rgb(178, 209, 225); /* Ljus kant uppåt/vänster */
+  .container {
+    margin-top: 3vh;
+    width: 90vw;
+    margin-left: 3vw;
+  }
 }
