--- a/style.css
+++ b/style.css
@@ -308,9 +308,13 @@ main {
 
 .main-info {
   display: flex;
+  flex-direction: column;
   background-color: #f8f8f8;
   padding: 5%;
   flex: 7;
+}
+.main-info p {
+  margin-bottom: 10px;
 }
 .facts-border {
   width: 100%;
@@ -485,6 +489,26 @@ p.orange {
   font-size: 1.2rem;
   font-weight: bold;
   color: #2f6f8a;
+}
+/*-------------Kunskap-----------------------------*/
+#knowledge {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+  background-color: #f8f8f8;
+  border: 1px solid black;
+  padding: 2%;
+}
+#knowledge-text p {
+  margin-bottom: 20px;
+}
+#knowledge-text ul li::marker {
+  color: #d76447; /* Ändrar färg på prickarna */
+  font-size: 25px; /* Ändrar storlek på prickarna */
+}
+#knowledge-pic {
+  width: 50%;
 }
 
 /*-------------Kontakt-----------------------------*/
