Updated portfolio section styling by changing class from 'alias' to 'p-blue' for improved visual consistency.

--- a/style.css
+++ b/style.css
@@ -500,7 +500,7 @@ p.orange {
   border: 1px solid black;
   padding: 2%;
 }
-#portfolio-container .alias {
+#portfolio-container .p-blue {
   padding-left: 10px;
 }
 #portfolio-header {
