--- a/style.css
+++ b/style.css
@@ -531,33 +531,40 @@ p.orange {
 }
 
 .portfolio-button {
+  position: relative; /* Gör att barn kan positioneras fritt */
+  overflow: visible;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-shrink: 0;
-  width: 35px;
-  height: 35px;
+  width: 5vw;
+  height: auto;
+  aspect-ratio: 1/1; /* Fyrkantig */
+  border: 0.45vw solid #2f6f8a;
   border-radius: 50%;
-  border: 4px solid #2f6f8a;
-  margin: -2.7px;
   cursor: pointer;
 }
 .portfolio-button:hover {
-  border: 3px solid #2f6f8a;
+  border: 0.25vw solid #2f6f8a;
 }
 
 .github-icon {
-  transform: scale(1.8);
-  margin-bottom: -3px;
+  position: absolute;
+  width: 5vw;
+  aspect-ratio: 1 / 1;
+  margin-bottom: -18%;
 }
+
 #cv-icon {
-  transform: scale(1.8);
+  position: absolute;
+  width: 5vw;
+  aspect-ratio: 1 / 1;
 }
 
 /*-------------Kunskap-----------------------------*/
 #knowledge {
   width: 100%;
-  height: 100%;
+  max-height: 58vh;
   background-color: #f8f8f8;
   border: 1px solid black;
   padding: 20px;
@@ -567,7 +574,10 @@ p.orange {
   flex-direction: row;
   width: 100%;
   margin-top: 20px;
+  justify-content: space-evenly;
+  align-items: center;
 }
+
 #knowledge-text p {
   margin-bottom: 20px;
 }
@@ -592,10 +602,9 @@ p.orange {
 
 #knowledge-pic {
   display: flex;
-  width: 50%;
+  width: 23vw;
   height: auto;
   object-fit: contain;
-  margin-left: auto;
 }
 
 /*-------------Kontakt-----------------------------*/
